--- a/kmaps-app/src/views/Kmaps/RelatedViewer/RelatedsViewer.scss
+++ b/kmaps-app/src/views/Kmaps/RelatedViewer/RelatedsViewer.scss
@@ -405,6 +405,7 @@
         margin-left: 0.75rem;
         list-style-type: none;
         padding-inline-start: 0;
+        line-height: 2;
         li {
             /* line-height: 0.75; */
         }
@@ -441,6 +442,7 @@
         margin-left: 0.75rem;
         list-style-type: none;
         padding-inline-start: 0;
+        line-height: 1.5;
         li {
             /* line-height: 0.75; */
         }
