--- a/kmaps-app/src/index.scss
+++ b/kmaps-app/src/index.scss
@@ -407,18 +407,18 @@ header.terms + .two-columns {
                     border-radius: 1rem 1rem 0 0;
                     letter-spacing: 0.125rem;
                     font-weight: bold;
-                    font-size: 1.2rem;
+                    font-size: 1.3rem;
                     padding: 1rem 2.5rem 0.4rem;
                     transition: all 0.3s;
-
-                    &:hover {
-                        border-color: #999;
-                    }
-
-                    &.active {
+                    &.active,
+                    &.active:hover {
                         border-color: #aaa;
                         border-top: 0.3rem solid $color-places;
-                        padding: 0.75rem 2.5rem 0.5rem;
+                        background-color: #fff;
+                        margin-top: -0.25rem;
+                    }
+                    &:hover {
+                        border-top-color: #555;
                         background-color: #fff;
                     }
                 }
@@ -521,7 +521,7 @@ header.terms + .two-columns {
             .nav-link {
                 padding: 0;
                 margin: 0;
-                width: 31%;
+                width: 32%;
                 text-align: center;
                 border: none;
                 border-right: 1px solid #aaa;
@@ -534,7 +534,7 @@ header.terms + .two-columns {
                 border-radius: 0;
                 transition: all 0.35s;
                 &:nth-of-type(2) {
-                    width: 38%;
+                    width: 35%;
                 }
                 &:last-of-type {
                     border-right: none;
@@ -573,7 +573,7 @@ header.terms + .two-columns {
             }
         }
         .treeNav-header ~ .nav-tabs .nav-link {
-            margin-top: 0.25rem 0;
+            margin-top: 0.25rem;
             padding-bottom: 0.25rem;
         }
     }
