--- a/kmaps-app/src/views/KmapTree/KmapTree.scss
+++ b/kmaps-app/src/views/KmapTree/KmapTree.scss
@@ -132,15 +132,17 @@ ul.fancytree-container {
     // line-height: 1.45;
     .toggle-icon::before {
         content: '';
-        width: 0.85rem;
-        height: 0.85rem;
-        margin-right: 0.7rem;
+        width: 0.9rem;
+        height: 0.9rem;
+        margin-right: 0.5rem;
         margin-left: 0.3rem;
-        border: 2px solid #b99b45;
+        border: 0.25rem solid #b99b45;
+        background-color: #fff;
         display: inline-block;
         position: relative;
         top: -0.25rem;
         left: 0;
+        z-index: 1;
         transform: rotate(45deg);
     }
 }
