Style minor update feature pager font style

--- a/kmaps-app/src/views/common/FeaturePager/FeaturePager.scss
+++ b/kmaps-app/src/views/common/FeaturePager/FeaturePager.scss
@@ -8,6 +8,7 @@
     flex-flow: row wrap;
     padding: 0 3rem;
     color: #000;
+    letter-spacing: 0.035rem;
 
     ~ .c-featurePager__container,
     &.bottom {
