--- a/kmaps-app/src/index.scss
+++ b/kmaps-app/src/index.scss
@@ -504,7 +504,7 @@ header.terms + .two-columns {
     /* max-width: 45rem;
     min-width: calc(max(25vw, 32rem)); */
     font-size: 1.4rem;
-    background-color: #fff;
+    background-color: #eee;
     resize: horizontal;
     overflow: visible !important;
     /* border-left: 0.15rem solid #d0d0d0; */
@@ -515,9 +515,10 @@ header.terms + .two-columns {
         background-color: #fff;
         /*  margin-top: -3.4rem; */
         .nav-tabs {
-            padding: 0 0 0.5rem;
-            margin: 0.5rem 0 0;
+            padding: 0.5rem 0;
+            margin: 0 -1rem 0 0;
             border-bottom: none;
+            background: white;
             .nav-link {
                 padding: 0;
                 margin: 0;
@@ -608,11 +609,11 @@ header.terms + .two-columns {
     pre {
         text-align: center;
     }
-    .c-TreeNav--tabs {
-        padding-right: 1rem;
-        padding-top: 1rem;
+    &.c-TreeNav--tabs {
+        padding-right: 0rem;
         &.open {
             z-index: 1000;
+            background: #eee;
         }
     }
     &.open.standalone {
