--- a/kmaps-app/src/views/Images/images.scss
+++ b/kmaps-app/src/views/Images/images.scss
@@ -147,8 +147,8 @@
                 border-color: #f0f0f0;
             }
             &:active {
-                border-color: transparent;
-                border: 1px solid #fff;
+                //  border-color: transparent;
+                //  border: 1px solid #fff;
             }
         }
 
