--- a/kmaps-app/src/index.scss
+++ b/kmaps-app/src/index.scss
@@ -598,14 +598,13 @@ header.terms + .two-columns {
 }
 
 .l-column__search {
-    height: 100vh;
+    height: 100%;
     min-height: 80rem;
     font-size: 1.3rem;
     z-index: 1000;
     padding-right: 1rem;
     background: #fff;
     border-top: 0.6rem double #4d59ca;
-    // border-left: 0.15rem solid #fff;
     pre {
         text-align: center;
     }
