--- a/kmaps-app/src/views/KmapTree/KmapTree.scss
+++ b/kmaps-app/src/views/KmapTree/KmapTree.scss
@@ -8,11 +8,11 @@ ul.fancytree-container {
     margin: 0 1rem 0 0;
     line-height: 1.5;
     overflow-y: scroll;
-    border-style: double solid solid solid;
-    border-color: #929ae4 #929ae4 #929ae4 #c0c0c0;
+    border-style: double solid;
+    border-color: #929ae4;
     // box-shadow: inset -0.5rem -2rem 3rem #c0cbd04d;
-    border-width: 0.325rem 0.15rem 0.575rem 0.15rem;
-    border-radius: 0.5rem 0 3rem 0.5rem;
+    border-width: 0.3rem 0.15rem 0.7rem 0.15rem;
+    border-radius: 0.5rem 0 4rem 0.5rem;
     background: white;
     font-size: 1.55rem;
     padding: 1rem 1rem 10rem;
@@ -22,13 +22,12 @@ ul.fancytree-container {
 }
 .l-column__search .c-kmaptree {
     height: calc(100vh - 15.25rem);
-    margin: 0.45rem 0 0;
+    margin: 0;
     padding-top: 1rem;
     padding-left: 2rem;
     border-width: 0.5rem 1rem 0.6rem 0;
-    border-top-left-radius: 0;
+    border-radius: 0 0 5rem 0;
     border-bottom-width: 1rem;
-    border-bottom-style: double;
 }
 .l-column__related .c-kmaptree {
     width: 23rem;
@@ -36,9 +35,7 @@ ul.fancytree-container {
     transition: width 0.5s;
     transition-delay: 0.4s;
     height: calc(100vh - 38rem);
-    border-bottom-width: 0.7rem;
-    border-bottom-style: double;
-    border-right-width: 0.5rem;
+    border-width: 0.5rem 0.35rem 0.7rem 0.3rem;
 }
 .l-column__related .c-kmaptree:hover {
     width: 50rem;
