--- a/kmaps-app/src/views/common/FeatureCard/FeatureCard.scss
+++ b/kmaps-app/src/views/common/FeatureCard/FeatureCard.scss
@@ -120,6 +120,7 @@
     border-bottom: none !important;
     display: inline-block;
     width: 100%;
+    color: #333;
 }
 
 .card-title .subtitle {
