--- a/kmaps-app/src/main/RightSideBar.scss
+++ b/kmaps-app/src/main/RightSideBar.scss
@@ -361,7 +361,7 @@
     border-left: 0.1rem solid #edf2f7;
 }
 .sui-advEditLine:hover {
-    background-color: #edf2f7;
+    background-color: #fff;
     border-left: 0.1rem solid #6b77ea;
     border-right: 0.2rem solid #6b77ea;
 }
