--- a/kmaps-app/src/views/Kmaps/RelatedViewer/RelatedsViewer.scss
+++ b/kmaps-app/src/views/Kmaps/RelatedViewer/RelatedsViewer.scss
@@ -412,14 +412,13 @@
         li::before {
             content: '';
             display: inline-block;
-            width: 0.6rem;
-            height: 0.6rem;
-            border: 0.15rem solid #888;
+            width: 0.65rem;
+            height: 0.65rem;
+            border: 0.2rem solid #888;
             margin-right: 1rem;
             position: relative;
-            left: 0.1rem;
-            top: 1.4rem;
-            float: left;
+            left: 0.5rem;
+            top: -0.15rem;
             transform: rotate(45deg);
         }
     }
@@ -427,13 +426,14 @@
         width: 100%;
         margin: 1.5rem 1rem 0.25rem 0;
         padding: 0.6rem 1rem 0.4rem 0;
-        font-weight: bold;
-        font-size: 1.45rem;
         text-transform: uppercase;
-
         font-size: 1.35rem;
         font-weight: bold;
     }
+}
+
+.nodeHeader-summary ul {
+    line-height: 1.25;
 }
 
 .c-content__main__kmaps {
