--- a/kmaps-app/src/views/Terms/TermDictionaries/TermDictionaries.css
+++ b/kmaps-app/src/views/Terms/TermDictionaries/TermDictionaries.css
@@ -19,9 +19,9 @@
     content: '\e658';
     display: inline-block;
     font-family: shanticon, sans-serif;
-    color: #fff;
+    color: #f0f0f0;
     position: absolute;
-    font-size: 2.65rem;
+    font-size: 2.55rem;
     width: 3rem;
     height: 3rem;
     left: 1.5rem;
