--- a/kmaps-app/src/index.scss
+++ b/kmaps-app/src/index.scss
@@ -257,6 +257,7 @@ div.image-wrapper.center figcaption {
 .l-content__main {
     display: flex;
     margin: 1rem 1.25rem 0 1rem;
+    min-height: calc(100vh - 12rem);
 }
 .l-site__wrap > *,
 .l-content__main,
@@ -1122,7 +1123,8 @@ header.terms + .two-columns .c-view__wrapper.gallery {
         line-height: 2.5rem;
         font-size: 1.65rem;
         .header {
-            color: #000;
+            color: #333;
+            font-weight: bold;
             .subtitle {
                 display: inline-block;
                 margin-left: 0.5rem;
@@ -1242,8 +1244,9 @@ header.terms + .two-columns .c-view__wrapper.gallery {
     }
 
     .feature-types span {
-        font-size: 1.1rem;
+        font-size: 1.5rem;
         font-style: italic;
+        color: #000;
     }
     .feature-types span::before {
         width: 0.6rem;
