--- a/kmaps-app/src/views/KmapTree/KmapTree.scss
+++ b/kmaps-app/src/views/KmapTree/KmapTree.scss
@@ -10,7 +10,7 @@ ul.fancytree-container {
     overflow-y: scroll;
     border-style: double solid;
     border-color: #929ae4;
-    // box-shadow: inset -0.5rem -2rem 3rem #c0cbd04d;
+    box-shadow: inset -0.5rem -2rem 3rem #c0cbd04d;
     border-width: 0.3rem 0.15rem 0.7rem 0.15rem;
     border-radius: 0.5rem 0 4rem 0.5rem;
     background: white;
@@ -35,7 +35,7 @@ ul.fancytree-container {
     transition: width 0.5s;
     transition-delay: 0.4s;
     height: calc(100vh - 38rem);
-    border-width: 0.5rem 0.35rem 0.7rem 0.3rem;
+    border-width: 0.5rem 0.45rem 0.7rem 0.3rem;
 }
 .l-column__related .c-kmaptree:hover {
     width: 50rem;
