--- a/kmaps-app/src/index.scss
+++ b/kmaps-app/src/index.scss
@@ -687,50 +687,22 @@ header.terms + .two-columns {
         padding-right: 2rem;
         height: 5rem;
 
-        &:hover {
-        }
-        button {
-            color: #fff;
-            background-color: #3f49b1;
-            opacity: 0.9;
-            padding: 0.35rem 0.75rem 0.25rem 0.75rem;
-            display: inline-block;
-            border-radius: 2rem;
-            border: 0.15rem dashed #999;
-            margin: 0.5rem 1rem 0.6rem 1.5rem;
-            transition: all 0.25s;
+        h4 {
+            margin-left: 2.5rem;
+            color: #f0f0f0;
+            padding: 0;
+            line-height: 2.4;
+            font-size: 1.75rem;
+            letter-spacing: 0.075rem;
 
-            &:hover {
-                opacity: 1;
-                border-width: 0.1rem;
-                margin-left: 1.6rem;
-                .header-icon svg {
-                    transform: scale(1);
-                    transition: all 0.35s;
-                }
-            }
-            &:active {
-                border-style: solid;
-                .header-icon svg {
-                    transform: scale(0.9);
-                }
-            }
-            .header-icon svg {
-                font-size: 2.15rem;
-                transition: all 0.2s;
-                transform: scale(1);
-                position: relative;
-                bottom: 0.075rem;
-            }
             .header-label-count {
                 font-size: 1.15rem;
                 letter-spacing: 0.125rem;
-                margin-left: 1rem;
+                margin-left: 0.25rem;
                 font-weight: bold;
                 text-transform: uppercase;
                 position: relative;
-                top: 0.1rem;
-
+                bottom: 0.2rem;
                 .badge {
                     font-size: 1.15rem;
                     letter-spacing: 0.0125rem;
@@ -746,25 +718,8 @@ header.terms + .two-columns {
                     top: 0;
                 }
             }
-            &:hover .badge {
-                opacity: 1;
-                color: #333;
-            }
-            &:active .badge {
-                opacity: 0.75;
-                color: #000;
-            }
         }
-        button:first-of-type {
-            background-color: #6b75d6;
-            opacity: 0.9;
-            position: relative;
-            &:hover {
-                border-color: #ccc;
-                border-style: solid;
-                opacity: 1;
-            }
-        }
+
         /* CLOSE - Search Column -- Filters */
         .search-column-close-filters {
             padding: 0;
@@ -800,36 +755,23 @@ header.terms + .two-columns {
         margin: 0.5rem 0.5rem 0 0;
         padding: 0;
         display: flex;
-        justify-content: flex-end;
-        h5 {
-            flex: 1;
-            color: #555;
-            font-weight: bold;
-            font-size: 1.75rem;
-            text-transform: capitalize;
-            margin: 0 0 0 2rem;
-        }
+        justify-content: space-between;
+
         button {
             font-style: italic;
-            font-size: 1.15rem;
+            font-size: 1.3rem;
             font-weight: bold;
-            letter-spacing: 0.025rem;
-            max-width: 8rem;
-            padding: 0.5rem 0.85rem 0.6rem;
+            line-height: 1.5;
+            letter-spacing: 0.125rem;
+            margin: 0 0.35rem 0 0;
+            padding: 0.25rem 1.5rem;
             border: 1px solid #ddd;
-            margin: 0 0.35rem;
-            border-radius: 0.5rem;
+            border-radius: 1.8rem;
             background-color: #a27f1c;
             color: #fff;
-            letter-spacing: 0.1rem;
-            transition: all 0.2s ease-in-out;
-            position: relative;
-            top: -0.1rem;
             opacity: 0.9;
-            line-height: 1.25;
-            flex: 1;
+            transition: all 0.2s;
             &:hover {
-                background-color: #a27f1c;
                 border-color: #a27f1c;
                 color: #fff;
                 opacity: 1;
@@ -837,10 +779,29 @@ header.terms + .two-columns {
             &:active {
                 border-color: transparent !important;
             }
-            em {
-                font-size: 1rem;
-                display: block;
-                letter-spacing: 0.075rem;
+        }
+
+        button:first-of-type {
+            color: #fff;
+            text-align: left;
+            padding-left: 1rem;
+            padding-right: 1rem;
+            margin-left: 2rem;
+            width: 12rem;
+            line-height: 1.7;
+
+            &:hover {
+            }
+            &:active {
+                .header-icon svg {
+                }
+            }
+            .header-icon svg {
+                font-size: 1.75rem;
+                color: #fff;
+                margin: 0 0.75rem 0 0.15rem;
+                position: relative;
+                bottom: 0.1rem;
             }
         }
     }
@@ -999,11 +960,17 @@ header.terms + .two-columns .c-buttonGroup__viewMode {
     letter-spacing: 0.025rem;
     display: none;
 }
-
 .c-buttonGroup__viewMode .icon::before {
     font-size: 1.5rem;
     position: relative;
     top: 0.35rem;
+}
+
+.c-buttonGroup__viewMode .active .icon {
+    border-color: $color-mandala;
+}
+.c-buttonGroup__viewMode .active .icon::before {
+    color: $color-mandala;
 }
 
 .c-buttonGroup__sortMode {
