--- a/kmaps-app/src/index.scss
+++ b/kmaps-app/src/index.scss
@@ -787,8 +787,9 @@ header.terms + .two-columns {
             padding-left: 1rem;
             padding-right: 1rem;
             margin-left: 2rem;
-            width: 12rem;
+            width: 16rem;
             line-height: 1.7;
+            letter-spacing: 0.025rem;
 
             &:hover {
             }
