--- a/kmaps-app/src/index.scss
+++ b/kmaps-app/src/index.scss
@@ -1415,8 +1415,14 @@ span.refdate {
         border: 4px double #555;
         display: inline-block;
         padding: 0.3rem 1.5rem;
+        transform: scale(1);
+        transition: all 0.45s;
         &:hover {
             background: #f0f0f0;
+        }
+        &:active,
+        &:focus {
+            transform: scale(0.95);
         }
     }
     .ol-rotate,
