--- a/kmaps-app/src/index.scss
+++ b/kmaps-app/src/index.scss
@@ -508,7 +508,7 @@ header.terms + .two-columns {
     background-color: #eee;
     resize: horizontal;
     overflow: visible !important;
-    /* border-left: 0.15rem solid #d0d0d0; */
+    border-left: 0.25rem solid #d0d0d0;
 
     .advanced-search-and-tree {
         position: relative;
@@ -602,6 +602,13 @@ header.terms + .two-columns {
     padding-right: 1rem;
     background: #fff;
     border-top: 0.6rem double #4d59ca;
+
+    p {
+        margin: 0.75rem auto -0.45rem;
+        text-align: center;
+        font-style: italic;
+        font-size: 1.4rem;
+    }
     pre {
         text-align: center;
     }
@@ -838,7 +845,7 @@ header.terms + .two-columns {
         background-color: transparent;
         cursor: col-resize !important;
         &::before {
-            height: calc(100vh - 7.5rem);
+            height: calc(100vh - 6.75rem);
             position: relative;
             left: -1rem;
             top: -4.5rem;
