--- a/kmaps-app/src/views/Terms/TermDictionaries/TermDictionaries.css
+++ b/kmaps-app/src/views/Terms/TermDictionaries/TermDictionaries.css
@@ -19,7 +19,7 @@
     content: '\e658';
     display: inline-block;
     font-family: shanticon, sans-serif;
-    color: #f0f0f0;
+    color: #eee;
     position: absolute;
     font-size: 2.55rem;
     width: 3rem;
