--- a/kmaps-app/src/index.scss
+++ b/kmaps-app/src/index.scss
@@ -669,18 +669,18 @@ header.terms + .two-columns {
             right: 2.25rem;
             bottom: -0.1rem;
             transition: all 0.2s;
-            transform: scale(1);
+            transform: scale(1.25);
             opacity: 0.5;
-
             .icon::before {
                 color: #fff;
             }
             &:hover {
                 opacity: 0.8;
-                transform: scale(1.05);
+                transform: scale(1.1);
             }
             &:active {
-                transform: scale(0.95);
+                transform: scale(1.25);
+                border: none;
             }
         }
     }
@@ -739,17 +739,17 @@ header.terms + .two-columns {
             font-size: 1.75rem;
             transition: all 0.2s;
             -webkit-transform: scale(1);
-            transform: scale(1);
+            transform: scale(1.25);
             opacity: 0.5;
             .icon::before {
                 color: #fff;
             }
             &:hover {
                 opacity: 0.8;
-                transform: scale(1.25);
+                transform: scale(1.1);
             }
             &:active {
-                transform: scale(0.95);
+                transform: scale(1.25);
                 border: none;
             }
         }
