Fixing perspectives select updating

--- a/kmaps-app/src/index.scss
+++ b/kmaps-app/src/index.scss
@@ -587,10 +587,12 @@ header.terms + .two-columns {
     label {
         display: block;
     }
+    form,
     select {
         max-width: 18rem;
         margin-right: 1rem;
         margin-bottom: 0.5rem;
+        display: inline-block;
     }
 }
 
