Adding CSS React selector on anchor tag

--- a/kmaps-app/src/index.scss
+++ b/kmaps-app/src/index.scss
@@ -18,7 +18,7 @@ body {
 body.html {
     font-family: $font-family-sans, sans-serif;
 }
-a {
+.l-site__wrap a {
     text-decoration: none;
     color: #000;
     cursor: pointer;
