--- a/kmaps-app/src/views/common/FeatureCard/FeatureCard.scss
+++ b/kmaps-app/src/views/common/FeatureCard/FeatureCard.scss
@@ -353,3 +353,7 @@
     position: relative;
     top: 2px;
 }
+
+.c-card__grid--collections img ~ .c-card__grid__glyph--asset span {
+    display: none;
+}
