Style update fixing Collections Icon display in gallery cards

--- a/kmaps-app/src/views/common/FeatureCard/FeatureCard.scss
+++ b/kmaps-app/src/views/common/FeatureCard/FeatureCard.scss
@@ -357,3 +357,9 @@
 .c-card__grid--collections img ~ .c-card__grid__glyph--asset span {
     display: none;
 }
+.c-card__grid--collections
+    img[src*='gradient']
+    ~ .c-card__grid__glyph--asset
+    span {
+    display: block;
+}
