Style update Search, Browse header & buttons

--- a/kmaps-app/src/index.scss
+++ b/kmaps-app/src/index.scss
@@ -801,7 +801,7 @@ header.terms + .two-columns {
             }
         }
 
-        button.back-to-results {
+        .back-to-results {
             font-size: 1.2rem;
             text-transform: uppercase;
             color: #fff;
